fix spacing between about fields

--- a/src/main/resources/scss/_profiles.scss
+++ b/src/main/resources/scss/_profiles.scss
@@ -230,6 +230,14 @@
 
 		.about {
 			float: left;
+			.field{
+				&.education {
+					margin-bottom: 6px;
+				}
+				&.position {
+				    margin-bottom: 4px;
+				}
+			}
 		}
 
 		.social-fields {
